...
    <string name="gesture_name_swipe_right_two">Swipe right using two fingers</string>
    <string name="gesture_name_swipe_right_three">Swipe right using three fingers</string>
    <string name="gesture_name_swipe_up_two">Swipe up using two fingers</string>
    <string name="gesture_name_swipe_up_three">Swipe up using three fingers</string>
    <string name="gestures_pointers_two">Using two fingers</string>
    <string name="gestures_pointers_three">Using three fingers</string>
    <string name="get_help">Get help</string>
    <string name="help">Help</string>
    <string name="hide_password">Hide password</string>
    <string name="show_password">Show password</string>
    <string name="high_accuracy_mode_channel_name">High accuracy location</string>
    <string name="high_accuracy_mode_notification_title">High accuracy (GPS) mode enabled</string>
    <string name="hold_to_reorder">Hold to reorder</string>
...
    <string name="default_launcher_prompt">Change home app</string>
    <string name="default_launcher_prompt_def">Open settings to choose your default home app. Currently set to %s.</string>
    <string name="unknown_launcher_label">unknown app</string>
    <string name="open_settings">Open settings</string>
    <string name="connection_security_level_title">Remote connection security level</string>
    <string name="connection_security_level_default_summary">Only connect to the server when we are sure that connection is encrypted or you are at home</string>
    <string name="connection_security_most_secure">Most secure: Allow this app to know when you\'re home</string>
    <string name="connection_security_less_secure">Less secure: Do not allow this app to know when you\'re home</string>
    <string name="branding_icon_content_description">Alten branding icon</string>
    <string name="loading_content_description">Loading</string>
    <string name="searching_home_network">Searching on\nhome network</string>
    <string name="server_discovery_no_server_info">Check that your connection to internet. You can enter the address manually if you know it.</string>
    <string name="server_discovery_connect">Connect</string>
    <string name="welcome_alten_title">AltenEMS App</string>
...
    <string name="manual_server_wrong_url">Invalid Alten address</string>
    <string name="connection_screen_malformed_url">Verify that your Alten address is correct</string>
    <string name="clear_text">Clear text</string>
    <string name="local_first_title">Local by default.\nRemote when you\'re ready.</string>
    <string name="local_first_content">Your Alten is only accessible on your home network. To control your smart home from anywhere, you can set up remote access later in your settings.\n\nFor now, you\'re securely connected to your local network.</string>
    <string name="local_first_next">Got it</string>
    <string name="location_sharing_title">Use this device\'s location for automations</string>
    <string name="location_sharing_content">Location sharing enables powerful automations, such as turning off the heating when you leave home. This option shares the device\'s location only with your Alten system.\n\nThis data stays in your home and is never sent to third parties. It also helps strengthen the security of your connection to Alten.</string>
    <string name="location_sharing_share">Share my location</string>
    <string name="location_sharing_no_share">Do not share my location</string>
    <string name="location_secure_connection_title">Let us help secure your remote connection</string>
    <string name="location_secure_connection_content_http">It appears that your connection is not encrypted (currently using HTTP in your configuration).</string>
    <string name="location_secure_connection_content_location">If the app knows when you\'re away from home, it can choose a more secure way to connect to your Alten system if available. This requires location services to be enabled.</string>
    <string name="location_secure_connection_hint">This data will never be shared with the Alten project or third parties.</string>
    <string name="location_secure_connection_next">Next</string>
    <string name="location_secure_connection_save">Save</string>
    <string name="location_secure_connection_discard_permission">Location permission denied. Allow access or choose the \'Less secure\' option.</string>
    <string name="block_insecure_title">Insecure connection blocked</string>
    <string name="block_insecure_content">This connection is not secure because it uses HTTP. You have chosen to block insecure connections when not at home.</string>
    <string name="block_insecure_missing_home_setup">The app cannot determine whether you are at home because no home network has been configured.</string>
    <string name="block_insecure_missing_location">Location access is required to detect your home network. Android requires this because network information can be used to infer your location.</string>
    <string name="block_insecure_action_enable_location">Enable location</string>
    <string name="block_insecure_action_configure_home">Configure home network</string>
...
